clean up some code smells